Motoman/MotoComSDK/motocom32dll/Samples/MotocomDemoVCplusplus/MotoCom.h

DECSPCEX short APIENTRY BscPMovl(short nCid,char *vtype,double spd,short toolno,double *p);
DECSPCEX short APIENTRY BscPMovlEx(short nCid,char *vtype,double spd,short toolno,double *p,short axisNum);
DECSPCEX short APIENTRY BscPuts(short nCid,char *bufptr,WORD length);
DECSPCEX short APIENTRY BscPutUFrame(short nCid,char *ufname,double *p);
DECSPCEX short APIENTRY BscPutUFrameEx2(short nCid,short ctype, char *ufname,double *p);
DECSPCEX short APIENTRY BscPutVarData(short nCid,short type,short varno,double *dat);
DECSPCEX short APIENTRY BscPutVarData2(short nCid,short type,short varno,double *dat,short axisNum); // MotoCom32.dll V3.53
DECSPCEX short APIENTRY BscPutVarDataEx(short nCid,short type,short varno,double *dat,char *s,short axisNum);
DECSPCEX short APIENTRY BscReadAlarmS(short nCid,WORD *data,char *s);								// T.Ariyoshi 
DECSPCEX short APIENTRY BscReadIO(short nCid,WORD startadd,WORD ionum,WORD *stat);
DECSPCEX short APIENTRY BscReadIO2(short nCid,DWORD startadd,WORD ionum,WORD *stat); //2003.08.11
DECSPCEX short APIENTRY BscReConnect(short nCid);
DECSPCEX short APIENTRY BscReset(short nCid);
DECSPCEX short APIENTRY BscReStartJob(short nCid);
DECSPCEX short APIENTRY BscSelectJob(short nCid,char *name);
DECSPCEX short APIENTRY BscSelectMode(short nCid,short mode);
DECSPCEX short APIENTRY BscSelLoopCycle(short nCid);
DECSPCEX short APIENTRY BscSelOneCycle(short nCid);
DECSPCEX short APIENTRY BscSelStepCycle(short nCid);
DECSPCEX short APIENTRY BscServoOff(short nCid);
DECSPCEX short APIENTRY BscServoOn(short nCid);
//DECSPCEX short APIENTRY BscSetAbso(short nCid,short axisno,long abso);
DECSPCEX short APIENTRY BscSetBreak(short nCid,short flg);
DECSPCEX short APIENTRY BscSetCom(short nCid,short port,DWORD baud,short parity,short clen,short stp);
DECSPCEX short APIENTRY BscSetCondBSC(short nCid,short timerA,short timerB,short rtyR,short rtyW);
DECSPCEX short APIENTRY BscSetCtrlGroup(short nCid,WORD groupno);
DECSPCEX short APIENTRY BscSetCtrlGroupDx(short nCid,DWORD groupno1, DWORD groupno2);
DECSPCEX short APIENTRY BscSetCtrlGroupXrc(short nCid,WORD groupno1, WORD groupno2);
DECSPCEX short APIENTRY BscSetEServer( short nCid, char *IPaddr );
DECSPCEX short APIENTRY BscSetEServerMode( short nCid, char *IPaddr, short Mode );
DECSPCEX short APIENTRY BscSetEther( short nCid, char *IPaddr, short mode, HWND hWnd);
//DECSPCEX short APIENTRY BscSetFrameType(short nCid, short frameType);
//DECSPCEX short APIENTRY BscSetHSL(short nCid,LPCTSTR strName,short port);
DECSPCEX short APIENTRY BscSetLineNumber(short nCid,short line);
DECSPCEX short APIENTRY BscSetMasterJob(short nCid);
DECSPCEX short APIENTRY BscStartJob(short nCid);
DECSPCEX short APIENTRY BscStatus(short nCid,char *hpt,char *dpt,unsigned short sz,char *rbuf);
DECSPCEX short APIENTRY BscUpLoad(short nCid,char *fname);
DECSPCEX short APIENTRY BscUpLoadEx(short nCid,char *fname, char *desPath, BOOL nFlg);
//DECSPCEX short APIENTRY BscUpLoadTRQ(short nCid,char *fname);								// T.Ariyoshi 
//DECSPCEX short APIENTRY BscUpLoadTRQ_HM(short nCid,char *fname,short nType,short nNo);		// T.Ariyoshi 
DECSPCEX short APIENTRY BscWriteIO(short nCid,WORD startadd,WORD ionum,WORD *stat);
DECSPCEX short APIENTRY BscWriteIO2(short nCid,DWORD startadd,WORD ionum,WORD *stat);
/****************************************************/
/****************   FC1,FC2 *************************/
/****************************************************/
/* FCWIN.H */
/*************** Slave Command /I am FC1. ***********************/
/* DOS  COM1:96,E,8,1 */
/* Win FC1 COM1:4800,E,8,1 */
/* Win FC2 COM1:19200,E,8,1 */
DECSPCEX short APIENTRY FcClose(short nCid);
DECSPCEX short APIENTRY FcConnect(short nCid);
DECSPCEX short APIENTRY FcDisConnect(short nCid);
DECSPCEX short APIENTRY FcGetCom(short nCid,char *buf,short size);
DECSPCEX short APIENTRY FcGetData(short nCid,char *buf,short size);
DECSPCEX short APIENTRY FcGetPath(short nCid,char *buf,short size);
DECSPCEX short APIENTRY FcOpen(char *path,short mode);
DECSPCEX short APIENTRY FcProc(short nCid,short isremove);
DECSPCEX short APIENTRY FcScan(short nCid);
DECSPCEX short APIENTRY FcSetBreak(short nCid,short flg);
DECSPCEX short APIENTRY FcSetCom(short nCid,short port,DWORD baud,short parity,short clen,short stp);
DECSPCEX short APIENTRY FcSetHSL(short nCid,LPCTSTR strName,short port);
/*************** Master Command /I am ERC.***********************/
DECSPCEX short APIENTRY FcAutoDeleteSet(short nCid,short flg);
DECSPCEX short APIENTRY FcBye(short nCid);
DECSPCEX short APIENTRY FcChangeDir(short nCid,char *dname);
DECSPCEX short APIENTRY FcChangeDrive(short nCid,char *type);
DECSPCEX short APIENTRY FcDiskSize(short nCid,char *disksize,short size);
DECSPCEX short APIENTRY FcDiskSizeSet(short nCid,short flg);
DECSPCEX short APIENTRY FcDownload(short nCid,char *fname);
DECSPCEX short APIENTRY FcFileSize(short nCid,char *fname,long *size);
DECSPCEX short APIENTRY FcFindCurrentDir(short nCid,char *dname,short size);
DECSPCEX short APIENTRY FcFindFirst(short nCid,char *fname,short size);
DECSPCEX short APIENTRY FcFindFirstDir(short nCid,char *dname,short size);
DECSPCEX short APIENTRY FcFindNext(short nCid,char *fname,short size);
DECSPCEX short APIENTRY FcFindNextDir(short nCid,char *dname,short size);
DECSPCEX short APIENTRY FcIsDiskSize(short nCid);
DECSPCEX short APIENTRY FcLogin(short nCid);
DECSPCEX short APIENTRY FcLogout(short nCid);
DECSPCEX short APIENTRY FcMakeDir(short nCid,char *dname);
DECSPCEX short APIENTRY FcRemove(short nCid,char *fname);
DECSPCEX short APIENTRY FcRename(short nCid,char *oldname,char *newname);
DECSPCEX short APIENTRY FcUpload(short nCid,char *fname);