Motoman/MotoComSDK/motocom32dll/Samples/MotocomDemoVB/MotoCom32.BAS

Declare Function BscPMovl Lib "MotoCom32" Alias "_BscPMovl@24" (ByVal nCid%, ByVal vtype$, ByVal spd#, ByVal toolno%, p#) As Integer
Declare Function BscPMovlEx Lib "MotoCom32" Alias "_BscPMovlEx@28" (ByVal nCid%, ByVal vtype$, ByVal spd#, ByVal toolno%, p#, ByVal axisNum%) As Integer
Declare Function BscPuts Lib "MotoCom32" Alias "_BscPuts@12" (ByVal nCid%, ByVal bufptr$, ByVal length%) As Integer
Declare Function BscPutUFrame Lib "MotoCom32" Alias "_BscPutUFrame@12" (ByVal nCid%, ByVal ufname$, p#) As Integer
Declare Function BscPutUFrameEx2 Lib "MotoCom32" Alias "_BscPutUFrameEx2@16" (ByVal nCid%, ByVal ctype%, ByVal ufname$, p#) As Integer
Declare Function BscPutVarData Lib "MotoCom32" Alias "_BscPutVarData@16" (ByVal nCid%, ByVal type_v%, ByVal varno%, dat#) As Integer
Declare Function BscPutVarData2 Lib "MotoCom32" Alias "_BscPutVarData2@20" (ByVal nCid%, ByVal type_v%, ByVal varno%, dat#, ByVal axisNum%) As Integer
Declare Function BscPutVarDataEx Lib "MotoCom32" Alias "_BscPutVarDataEx@24" (ByVal nCid%, ByVal type_v%, ByVal varno%, dat#, ByVal s$, ByVal axisNum%) As Integer
Declare Function BscReadAlarmS Lib "MotoCom32" Alias "_BscReadAlarmS@12" (ByVal nCid%, data_v%, ByVal s$) As Integer
Declare Function BscReadIO Lib "MotoCom32" Alias "_BscReadIO@16" (ByVal nCid%, ByVal startadd%, ByVal ionum%, stat%) As Integer
Declare Function BscReadIO2 Lib "MotoCom32" Alias "_BscReadIO2@16" (ByVal nCid%, ByVal startadd&, ByVal ionum%, stat%) As Integer
Declare Function BscReConnect Lib "MotoCom32" Alias "_BscReConnect@4" (ByVal nCid%) As Integer
Declare Function BscReset Lib "MotoCom32" Alias "_BscReset@4" (ByVal nCid%) As Integer
Declare Function BscReStartJob Lib "MotoCom32" Alias "_BscReStartJob@4" (ByVal nCid%) As Integer
Declare Function BscSelectJob Lib "MotoCom32" Alias "_BscSelectJob@8" (ByVal nCid%, ByVal name_v$) As Integer
Declare Function BscSelectMode Lib "MotoCom32" Alias "_BscSelectMode@8" (ByVal nCid%, ByVal mode%) As Integer
Declare Function BscSelLoopCycle Lib "MotoCom32" Alias "_BscSelLoopCycle@4" (ByVal nCid%) As Integer
Declare Function BscSelOneCycle Lib "MotoCom32" Alias "_BscSelOneCycle@4" (ByVal nCid%) As Integer
Declare Function BscSelStepCycle Lib "MotoCom32" Alias "_BscSelStepCycle@4" (ByVal nCid%) As Integer
Declare Function BscServoOff Lib "MotoCom32" Alias "_BscServoOff@4" (ByVal nCid%) As Integer
Declare Function BscServoOn Lib "MotoCom32" Alias "_BscServoOn@4" (ByVal nCid%) As Integer
'Declare Function BscSetAbso Lib "MotoCom32" Alias "_BscSetAbso@12" (ByVal nCid%, ByVal axisno%, ByVal abso&) As Integer
Declare Function BscSetBreak Lib "MotoCom32" Alias "_BscSetBreak@8" (ByVal nCid%, ByVal flg%) As Integer
Declare Function BscSetCom Lib "MotoCom32" Alias "_BscSetCom@24" (ByVal nCid%, ByVal port%, ByVal baud&, ByVal parity%, ByVal clen%, ByVal stp%) As Integer
Declare Function BscSetCondBSC Lib "MotoCom32" Alias "_BscSetCondBSC@20" (ByVal nCid%, ByVal timerA%, ByVal timerB%, ByVal rtyR%, ByVal rtyW%) As Integer
Declare Function BscSetCtrlGroup Lib "MotoCom32" Alias "_BscSetCtrlGroup@8" (ByVal nCid%, ByVal groupno%) As Integer
Declare Function BscSetCtrlGroupDx Lib "MotoCom32" Alias "_BscSetCtrlGroupDx@12" (ByVal nCid%, ByVal groupno1&, ByVal groupno2&) As Integer
Declare Function BscSetCtrlGroupXrc Lib "MotoCom32" Alias "_BscSetCtrlGroupXrc@12" (ByVal nCid%, ByVal groupno1%, ByVal groupno2%) As Integer
Declare Function BscSetEServer Lib "MotoCom32" Alias "_BscSetEServer@8" (ByVal nCid%, ByVal IPaddr$) As Integer
Declare Function BscSetEServerMode Lib "MotoCom32" Alias "_BscSetEServerMode@12" (ByVal nCid%, ByVal IPaddr$, ByVal Mode%) As Integer
Declare Function BscSetEther Lib "MotoCom32" Alias "_BscSetEther@16" (ByVal nCid%, ByVal IPaddr$, ByVal mode%, ByVal hWnd&) As Integer
'Declare Function BscSetHSL Lib "MotoCom32" Alias "_BscSetHSL@12" (ByVal nCid%, ByVal strName$, ByVal port%) As Integer
Declare Function BscSetLineNumber Lib "MotoCom32" Alias "_BscSetLineNumber@8" (ByVal nCid%, ByVal line_v%) As Integer
Declare Function BscSetMasterJob Lib "MotoCom32" Alias "_BscSetMasterJob@4" (ByVal nCid%) As Integer
Declare Function BscStartJob Lib "MotoCom32" Alias "_BscStartJob@4" (ByVal nCid%) As Integer
Declare Function BscStatus Lib "MotoCom32" Alias "_BscStatus@20" (ByVal nCid%, ByVal hpt$, ByVal dpt$, ByVal sz%, ByVal rbuf$) As Integer
Declare Function BscUpLoad Lib "MotoCom32" Alias "_BscUpLoad@8" (ByVal nCid%, ByVal fname$) As Integer
Declare Function BscUpLoadEx Lib "MotoCom32" Alias "_BscUpLoadEx@16" (ByVal nCid%, ByVal fname$, ByVal desPath$, ByVal nFlg As Boolean) As Integer
'Declare Function BscUpLoadTRQ_HM Lib "MotoCom32" Alias "_BscUpLoadTRQ_HM@16" (ByVal nCid%, ByVal fname$, ByVal nType, ByVal nNo) As Integer
'Declare Function BscUpLoadTRQ Lib "MotoCom32" Alias "_BscUpLoadTRQ@8" (ByVal nCid%, ByVal fname$) As Integer
Declare Function BscWriteIO Lib "MotoCom32" Alias "_BscWriteIO@16" (ByVal nCid%, ByVal startadd%, ByVal ionum%, stat%) As Integer
Declare Function BscWriteIO2 Lib "MotoCom32" Alias "_BscWriteIO2@16" (ByVal nCid%, ByVal startadd&, ByVal ionum%, stat%) As Integer

' /****************************************************/
' /****************   FC1,FC2 *************************/
' /****************************************************/
' /* FCWIN.H */
' /*************** Slave Command /I am FC1. ***********************/
' /* DOS  COM1:96,E,8,1 */
' /* Win FC1 COM1:4800,E,8,1 */
' /* Win FC2 COM1:19200,E,8,1 */
Declare Function FcClose Lib "MotoCom32" Alias "_FcClose@4" (ByVal nCid%) As Integer
Declare Function FcConnect Lib "MotoCom32" Alias "_FcConnect@4" (ByVal nCid%) As Integer
Declare Function FcDisConnect Lib "MotoCom32" Alias "_FcDisConnect@4" (ByVal nCid%) As Integer
Declare Function FcGetCom Lib "MotoCom32" Alias "_FcGetCom@12" (ByVal nCid%, ByVal buf$, ByVal size%) As Integer
Declare Function FcGetData Lib "MotoCom32" Alias "_FcGetData@12" (ByVal nCid%, ByVal buf$, ByVal size%) As Integer
Declare Function FcGetPath Lib "MotoCom32" Alias "_FcGetPath@12" (ByVal nCid%, ByVal buf$, ByVal size%) As Integer
Declare Function FcOpen Lib "MotoCom32" Alias "_FcOpen@8" (ByVal path$, ByVal mode%) As Integer
Declare Function FcProc Lib "MotoCom32" Alias "_FcProc@8" (ByVal nCid%, ByVal isremove%) As Integer
Declare Function FcScan Lib "MotoCom32" Alias "_FcScan@4" (ByVal nCid%) As Integer
Declare Function FcSetBreak Lib "MotoCom32" Alias "_FcSetBreak@8" (ByVal nCid%, ByVal flg%) As Integer
Declare Function FcSetCom Lib "MotoCom32" Alias "_FcSetCom@24" (ByVal nCid%, ByVal port%, ByVal baud&, ByVal parity%, ByVal clen%, ByVal stp%) As Integer
Declare Function FcSetHSL Lib "MotoCom32" Alias "_FcSetHSL@12" (ByVal nCid%, ByVal strName$, ByVal port%) As Integer

' /*************** Master Command /I am ERC.***********************/
Declare Function FcAutoDeleteSet Lib "MotoCom32" Alias "_FcAutoDeleteSet@8" (ByVal nCid%, ByVal flg%) As Integer
Declare Function FcBye Lib "MotoCom32" Alias "_FcBye@4" (ByVal nCid%) As Integer
Declare Function FcChangeDir Lib "MotoCom32" Alias "_FcChangeDir@8" (ByVal nCid%, ByVal dname$) As Integer
Declare Function FcChangeDrive Lib "MotoCom32" Alias "_FcChangeDrive@8" (ByVal nCid%, ByVal type_v$) As Integer
Declare Function FcDiskSize Lib "MotoCom32" Alias "_FcDiskSize@12" (ByVal nCid%, ByVal disksize$, ByVal size%) As Integer
Declare Function FcDiskSizeSet Lib "MotoCom32" Alias "_FcDiskSizeSet@8" (ByVal nCid%, ByVal flg%) As Integer
Declare Function FcDownload Lib "MotoCom32" Alias "_FcDownload@8" (ByVal nCid%, ByVal fname$) As Integer
Declare Function FcFileSize Lib "MotoCom32" Alias "_FcFileSize@12" (ByVal nCid%, ByVal fname$, size&) As Integer
Declare Function FcFindCurrentDir Lib "MotoCom32" Alias "_FcFindCurrentDir@12" (ByVal nCid%, ByVal dname$, ByVal size%) As Integer
Declare Function FcFindFirst Lib "MotoCom32" Alias "_FcFindFirst@12" (ByVal nCid%, ByVal fname$, ByVal size%) As Integer
Declare Function FcFindFirstDir Lib "MotoCom32" Alias "_FcFindFirstDir@12" (ByVal nCid%, ByVal dname$, ByVal size%) As Integer
Declare Function FcFindNext Lib "MotoCom32" Alias "_FcFindNext@12" (ByVal nCid%, ByVal fname$, ByVal size%) As Integer
Declare Function FcFindNextDir Lib "MotoCom32" Alias "_FcFindNextDir@12" (ByVal nCid%, ByVal dname$, ByVal size%) As Integer
Declare Function FcIsDiskSize Lib "MotoCom32" Alias "_FcIsDiskSize@4" (ByVal nCid%) As Integer
Declare Function FcLogin Lib "MotoCom32" Alias "_FcLogin@4" (ByVal nCid%) As Integer
Declare Function FcLogout Lib "MotoCom32" Alias "_FcLogout@4" (ByVal nCid%) As Integer
Declare Function FcMakeDir Lib "MotoCom32" Alias "_FcMakeDir@8" (ByVal nCid%, ByVal dname$) As Integer
Declare Function FcRemove Lib "MotoCom32" Alias "_FcRemove@8" (ByVal nCid%, ByVal fname$) As Integer
Declare Function FcRename Lib "MotoCom32" Alias "_FcRename@12" (ByVal nCid%, ByVal oldname$, ByVal newname$) As Integer
Declare Function FcUpload Lib "MotoCom32" Alias "_FcUpload@8" (ByVal nCid%, ByVal fname$) As Integer


'#ifdef __cplusplus
'}
'#endif
